# Scripts

./: .gitignore  README.md  eg-convert-image  eg-video2dash  eg_video2hls  eg_video2hls.movie.yml  pyproject.toml  requirements.txt  test_achtergrond.html  video2hls  video2hls-backup  video2hls-usage.txt
.github/workflows/: bouwen.yml
convert-image/: eg-convert-image
expeditiegrensland/: __init__.py
expeditiegrensland/gemeenschappelijk/: arg_types.py  commando.py  hash.py  log.py  maak_cli.py
expeditiegrensland/hernoemer/: hernoemer.py
expeditiegrensland/prepareer_bestand/: acties.py  cli.py  converteerders.py  noemers.py  prepareer_bestand.py
expeditiegrensland/prepareer_bestand/converteerders/: achtergrond.py  afbeelding_bijlage.py  audio_bijlage.py  basis.py  film.py  video_bijlage.py
expeditiegrensland/prepareer_bestand/noemers/: achtergrond.py  basis.py  citaat_bijlage.py  film.py  verhaal_bijlage.py  woord_bijlage.py
expeditiegrensland/video2dash/: cli.py  video2dash.py
expeditiegrensland/video2dash/configs/: basis.py  film.py  film.yml
